# backend/routes/auth-routes.js
@@ -2,6 +2,10 @@ const express = require("express");
 const router = express.Router();
 const authController = require("../controllers/auth-controller");
 
-router.post("/", authController.createUser);
+router.post("/login", authController.login);
+
+router.post("/register", authController.createUser);
+
+router.post("/logout", authController.logout);
 
 module.exports = router;
